# pi0.5

./: .gitignore  README.md  environment-rlds.yml  environment.yml  infer.py  infer_web.py  pyproject.toml  微调.md  数据采集.md  环境配置.md  真机.md
docs/: data_collection.md  environment_setup.md  finetuning.md  lora_merge_and_export.md  real_robot_deployment.md
docs_Chinese/: LoRA合并与拆分.md  remote_inference.md  开发板部署_README.md  微调.md  微调与部署.md  数据采集.md  环境配置.md  真机部署.md
examples/: convert_jax_model_to_pytorch.py
examples/droid/: README.md  README_train.md  convert_droid_data_to_lerobot.py
examples/fr3_realtime/: common.py  data_collector.py  dataset_recorder.py  environment.yml  go_home.py  inference_client.py  readonly_state_publisher.py  robot_server.py  rt_machine.md  streams.py
examples/fr3_realtime_libfranka/: CMakeLists.txt  environment.yml  rt_machine.md  test_random_pi05_output.py
examples/fr3_realtime_libfranka/src/: common.hpp  go_home.cpp  readonly_state_publisher.cpp  robot_server.cpp
local_deploy/: README_LOCAL.md  go_home_local.sh  start_inference_local.sh  start_policy_local.sh  start_robot_server_local.sh  train_orange_lora.sh
scripts/: export_lora_checkpoint.py  gen_episodes_stats.py  merge_lora_checkpoint.py  realsense_preview.py  train.py  zed_preview.py
src/openpi/: transforms.py
src/openpi/models_pytorch/: pi0_pytorch.py
src/openpi/policies/: aloha_policy.py  droid_policy.py  libero_policy.py
src/openpi/training/: checkpoints.py  config.py  data_loader.py
